--- a/public/styles/admin-instruction.css
+++ b/public/styles/admin-instruction.css
@@ -16,3 +16,11 @@
     min-height: 80px;
     max-width: 500px;
 }
+
+.bpr-usage-value {
+    background: black;
+    color: #7e57c2;
+    max-width: 500px;
+    padding: 10px;
+    white-space: pre-wrap;
+}
