--- a/public/styles/admin-instruction.css
+++ b/public/styles/admin-instruction.css
@@ -7,8 +7,14 @@
 }
 
 .bpr-usage-container {
-    background: lightgrey;
+    background: white;
     margin: 5px;
+    border: 1px solid lightgrey;
+}
+
+.bpr-usage-heading {
+    font-size: 1.5em;
+    border: 1px solid lightgrey;
     padding: 10px;
 }
 
