--- a/public/styles/admin-instruction.css
+++ b/public/styles/admin-instruction.css
@@ -12,21 +12,26 @@
     border: 1px solid lightgrey;
 }
 
+
 .bpr-usage-heading {
     font-size: 1.5em;
-    border: 1px solid lightgrey;
+    border-bottom: 1px solid lightgrey;
+    padding: 10px;
+}
+
+.bpr-usage-body {
     padding: 10px;
 }
 
 .bpr-usage-instruction {
     min-height: 80px;
-    max-width: 500px;
+    width: 500px;
 }
 
 .bpr-usage-value {
     background: black;
     color: #7e57c2;
-    max-width: 500px;
+    width: 500px;
     padding: 10px;
     white-space: pre-wrap;
 }
