--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ button.bpr_btncpy {
 }
 .bpr_copy-text input.bpr_text {
     padding: 10px;
-    font-size: 18px;
+    font-size: 14px;
     color: #555;
     border: none;
     outline: none;
@@ -37,7 +37,7 @@ button.bpr_btncpy {
 .bpr_text{
     position: relative;
 }
-.tooltip {
+.bpr_tooltip {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
@@ -45,11 +45,11 @@ button.bpr_btncpy {
     text-align: center;
     border-radius: 5px;
     font-size: 12px;
-    left: 22%;
+    left: 21%;
     right: 68%;
     transform: translateY(10%);
 }
-.bpr_shortcode_lable .tooltip:after {
+.bpr_shortcode_lable .bpr_tooltip:after {
     border-left: solid transparent 10px;
     border-right: solid transparent 10px;
     border-top: solid #515151 10px;
